# sat

./: .gitignore  Cargo.toml  sat_8x8_expression.txt
.cargo/: config.toml
.github/workflows/: release.yml  rust.yml
benches/: solver.rs
sat_formulas/: README.md  example.cnf  example_single_line.cnf
src/: lib.rs  main.rs
src/solver/: formula.rs  mod.rs  parser.rs
src/tui/: mod.rs
