[package]
name = "sat"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.50", features = ["derive"] }
color-eyre = "0.6.5"
criterion = "0.7.0"
crossterm = "0.29.0"
egui = "0.33.0"
env_logger = "0.11.8"
log = "0.4.28"
num-bigint = "0.4.6"
num-iter = "0.1.45"
num-traits = "0.2.19"
ratatui = "0.29.0"
rayon = "1.11.0"
